# own_code

./: .gitignore  AUTHORS.md  CMakeLists.txt  ClockTreeDrivenPlacement_Theory.md  opendp_or
history/: opendp_or_Nomulti  opendp_or_cluster
ispd2015_after_dp/: mgc_superblue11_a_opendp_cluster_lg.def.REMOVED.git-id  mgc_superblue11_a_ripple_lg.def.REMOVED.git-id  mgc_superblue12_abcd.def.REMOVED.git-id  mgc_superblue12_opendp_cluster_lg.def.REMOVED.git-id  mgc_superblue14_abcd.def.REMOVED.git-id  mgc_superblue14_opendp_cluster_lg.def.REMOVED.git-id  mgc_superblue16_a_abcd.def.REMOVED.git-id  mgc_superblue16_a_opendp_cluster_lg.def.REMOVED.git-id  mgc_superblue19_opendp_cluster_lg.def.REMOVED.git-id  mgc_superblue19_ripple_lg.def.REMOVED.git-id
ispd2015_logs/: 1.txt  1.xlsx  10.txt  10.xlsx  2.txt  2.xlsx  3.txt  3.xlsx  4.txt  4.xlsx  5.txt  5.xlsx  6.txt  6.xlsx  7.txt  7.xlsx  8.txt  8.xlsx  9.txt  9.xlsx  density_record.txt  tvlsi_evaluation_log.txt  tvlsi_evaluation_log.xlsx
module/def/5.8-p027/def/: def_keywords.cpp  defrData.cpp
module/lef/5.8-p027/: CMakeLists.txt
module/lef/5.8-p027/lef/: lef_keywords.cpp  lefrData.cpp
openroad_logs/: 1.txt  2.txt
src/: assign.cpp  check_legal.cpp  circuit.cpp  circuit.h  circuitParser.cpp  defParser.cpp  lefParser.cpp  main.cpp  mymeasure.cpp  parser.cpp  parser_helper.cpp  place.cpp  poabacus.cpp  utility.cpp
src/th/: CTSTree.cpp  CTSTree.h  PriorityQueue.h  Router.cpp  Router.h  global.h  ns.cpp  ns.h
